k- fixed some spacing on the product page, started adding images

--- a/pub_html/css/flexbox.css
+++ b/pub_html/css/flexbox.css
@@ -49,10 +49,6 @@
   margin-top: 1rem;
 }
 
-#section-index{
-  align-items: center;
-}
-
 .block-learnAboutUs{
   align-self: center;
 }
@@ -73,10 +69,26 @@
 } */
 
 /* product page main */
-
-.catalogue-container{
+.section-product-featured{
   align-content: space-around;
-  width:
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.product-details-container, .section-product-featured{
+  padding: 3rem 1rem;
+}
+
+.catalogue-filter{
+  width: 10rem;
+  margin: auto;
+}
+.section-product-catalogue{
+  align-content: space-around;
+  width: 70rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .margin-none{
